fix(sales): review fixes for the English bank block — fit, numbering, and wiring evidence
Opus review of #929 plus defects I found by rendering the English demo myself.

Two merged remark lines were CUT on the printed PDF: "…within ISO and TIS
toler" and "…not returnab". Each remark is one merged B..I cell that never
wraps, so an over-long line is clipped at the border, and every content test
stayed green because the text in the cell was intact. Both lines are now well
inside the 130 characters the pre-existing line 1 proves fits in both
LibreOffice and Chromium, and a new test caps every English remark line in both
layouts.

Numbering read 1, 2, bank block, 3, 5, 6 — a gap at 4 a customer reads as a
missing term, and matching neither of her samples. The block stays straight
after the payment remark as in both samples, and numbering now runs 1, 2,
bank, 3, 4, 5. Her skipped 4 is a spreadsheet artefact, not intent.

Nothing guarded the path from configuration to document. A typo in an @Value
key, a wrong digit in application.yml, or the service passing List.of()
instead of its own field all shipped green, because every service in the suite
was built with empty lines. Three tests now cover it: one resolves the real
application.yml through Spring's own loader against the verbatim text, one
reads the real @Value keys off the constructor by reflection, and an
integration test builds the service with the block and renders through
renderXlsx exactly as a download does.

Also: whitespace-only lines, a null line and a four-line list are now tested as
falling back; the placeholder and englishRemarkLines Javadocs no longer claim
the block is untranscribed or fixed text; and the bank tests sit above the
fixtures banner.

Mutation-checked six ways, each reddening exactly the intended test:
isBlank→isEmpty, size()==3→>=3, an over-long merged line, a typo in the
injected key, one wrong digit in the committed account number, and the service
ignoring its configured lines. All three 